Bug 58851 - Compile error: Missing (element-type) annotation.
Summary: Compile error: Missing (element-type) annotation.
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: tp-glib (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-29 06:53 UTC by Hashem Nasarat
Modified: 2012-12-30 01:27 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Compile error output (277.84 KB, text/plain)
2012-12-29 06:53 UTC, Hashem Nasarat
Details
Add some missing introspection annotations (2.18 KB, patch)
2012-12-29 12:06 UTC, Philip Withnall
Details | Splinter Review

Description Hashem Nasarat 2012-12-29 06:53:56 UTC
Created attachment 72238 [details]
Compile error output

telepathy-glib from jhbuild does not compile for me with Debian Wheezy.

dbus.c:884: Warning: TelepathyGLib: tp_asv_get_bytes: return value: Missing (element-type) annotation
capabilities.c:87: Warning: TelepathyGLib: tp_capabilities_get_channel_classes: return value: Missing (element-type) annotation
client-channel-factory.c:142: Warning: TelepathyGLib: tp_client_channel_factory_dup_channel_features: return value: Missing (element-type) annotation
<unknown>:: Fatal: TelepathyGLib: warnings configured as fatal
<unknown>:: Fatal: TelepathyGLib: warnings configured as fatal


Attached is the log.
Comment 1 Philip Withnall 2012-12-29 12:06:19 UTC
Created attachment 72248 [details] [review]
Add some missing introspection annotations

Fix. Already reviewed by Rob on IRC, but neither of us could commit it for various reasons.
Comment 2 Will Thompson 2012-12-29 12:18:17 UTC
Merged to master for 0.21.0 and 0.20 for 0.20.2.
Comment 3 Xavier Claessens 2012-12-29 12:36:51 UTC
Actually tp_capabilities_get_channel_classes() should be annotated with (skip) because there is nothing useful you can do with (element-type GHashTable). The introspectable API is tp_capabilities_dup_channel_classes_variant().
Comment 4 Giovanni Campagna 2012-12-30 01:27:38 UTC
I once had a patch that used (skip) on get_channel_classes(), but it was breaking some vala user (folks maybe, or maybe gnome-contacts, I don't remember).
Anyway, the right element-type does not seem GHashTable to me, but GValueArray, as the underlying boxed type is a dbus-glib struct.

(Just my 2 c.)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.