Add some missing (element-type) introspection annotations

This fixes compilation with --enable-introspection when introspection
warnings are treated as errors.

Signed-off-by: Robert McQueen <robert.mcqueen@collabora.co.uk>

https://bugs.freedesktop.org/show_bug.cgi?id=58851